[package]
name = "rust_gym"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "interactive"
path = "src/interactive.rs"

[[bin]]
name = "mc"
path = "src/monte_carlo.rs"

[dependencies]
anyhow = "1.0.68"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
plotters = "0.3.4"
rand = "0.8.5"
rand_isaac = "0.3.0"
serde = "1.0.148"
serde_json = "1.0.91"
