[package]
name = "agent_baselines"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mc"
path = "src/monte_carlo.rs"

[[bin]]
name = "sarsa"
path = "src/sarsa.rs"

[[bin]]
name = "interactive"
path = "src/interactive.rs"


[dependencies]
environment_baselines.workspace = true
rl_environment.workspace = true
anyhow.workspace = true
itertools.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
plotters.workspace = true
rand.workspace = true
rand_isaac.workspace = true
serde.workspace = true
serde_json.workspace = true
