[package]
name = "environment_baselines"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
plotters = "0.3.4"
rand = "0.8.5"
rand_isaac = "0.3.0"
serde = "1.0.148"
serde_json = "1.0.91"
rl_environment = { path = "../rl_environment"}
egui = "0.20.1"
# eframe = "0.20.1"

