[package]
name = "rl_environment"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
ndarray.workspace = true
ndarray-rand.workspace = true
plotters.workspace = true
rand.workspace = true
rand_isaac.workspace = true
serde.workspace = true
serde_json.workspace = true
